--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
       <div class="cars-container container">
         <!--Box 1-->
         <div class="box">
-          <img src="/img/1.png" alt="no" />
+          <img src="img\1.png" alt="no" />
           <h2>Bolero Pickup</h2>
         </div>
 
