--- a/index.html
+++ b/index.html
@@ -71,49 +71,49 @@
 
         <!--Box 2-->
         <div class="box">
-          <img src="/img/2.jpg" alt="no" />
+          <img src="img\2.jpg" alt="no" />
           <h2>Tata Ace</h2>
         </div>
 
         <!--Box 3-->
         <div class="box">
-          <img src="/img/3.png" alt="no" />
+          <img src="img\3.png" alt="no" />
           <h2>Eicher</h2>
         </div>
 
         <!--Box 4-->
         <div class="box">
-          <img src="/img/4.webp" alt="no" />
+          <img src="img\4.webp" alt="no" />
           <h2>Mahindra Supro</h2>
         </div>
 
         <!--Box 5-->
         <div class="box">
-          <img src="/img/5.webp" alt="no" />
+          <img src="img\5.webp" alt="no" />
           <h2>Ape Xtra</h2>
         </div>
 
         <!--Box 6-->
         <div class="box">
-          <img src="/img/6.webp" alt="no" />
+          <img src="img\6.webp" alt="no" />
           <h2>Ashok Leyland</h2>
         </div>
 
         <!--Box 7-->
         <div class="box">
-          <img src="/img/7.webp" alt="no" />
+          <img src="img\7.webp" alt="no" />
           <h2>Swift Dzire</h2>
         </div>
 
         <!--Box 8-->
         <div class="box">
-          <img src="/img/8.webp" alt="no" />
+          <img src="img\8.webp" alt="no" />
           <h2>Tata 407</h2>
         </div>
 
         <!--Box 9-->
         <div class="box">
-          <img src="/img/9.jpg" alt="no" />
+          <img src="img\9.jpg" alt="no" />
           <h2>Scorpio</h2>
         </div>
       </div>
@@ -123,7 +123,7 @@
     <section>
       <section class="about container" id="about">
         <div class="about-img">
-          <img src="/img/11.webp" alt="no" />
+          <img src="img\11.webp" alt="no" />
         </div>
         <div class="about-text">
           <span>About Us</span>
@@ -155,7 +155,7 @@
         <!--Box 1-->
 
         <div class="box">
-          <img src="/img/part1.png" alt="no" />
+          <img src="img\part1.png" alt="no" />
           <h3>OLSF Engine</h3>
           <!-- <span>$130.99</span> -->
           <i class="bx bxs-star">(9 Reviews)</i>
@@ -166,7 +166,7 @@
         <!--Box 2-->
 
         <div class="box">
-          <img src="/img/part2.png" alt="no" />
+          <img src="img\part2.png" alt="no" />
           <h3>Engine Pistons</h3>
           <!-- <span>$130.99</span> -->
           <i class="bx bxs-star">(6 Reviews)</i>
@@ -177,7 +177,7 @@
         <!--Box 3-->
 
         <div class="box">
-          <img src="/img/part3.png" alt="no" />
+          <img src="img\part3.png" alt="no" />
           <h3>Auto Spare Parts</h3>
           <!-- <span>$130.99</span> -->
           <i class="bx bxs-star">(4 Reviews)</i>
@@ -188,7 +188,7 @@
         <!--Box 4-->
 
         <div class="box">
-          <img src="/img/part4.png" alt="no" />
+          <img src="img\part4.png" alt="no" />
           <h3>Oil Filter</h3>
           <!-- <span>$130.99</span> -->
           <i class="bx bxs-star">(7 Reviews)</i>
@@ -199,7 +199,7 @@
         <!--Box 5-->
 
         <div class="box">
-          <img src="/img/part5.png" alt="no" />
+          <img src="img\part5.png" alt="no" />
           <h3>Alternator</h3>
           <!-- <span>$130.99</span> -->
           <i class="bx bxs-star">(5 Reviews)</i>
@@ -210,7 +210,7 @@
         <!--Box 6-->
 
         <div class="box">
-          <img src="/img/part6.png" alt="" />
+          <img src="img\part6.png" alt="" />
           <h3>Tyres</h3>
           <!-- <span>$130.99</span> -->
           <i class="bx bxs-star">(8 Reviews)</i>
@@ -233,7 +233,7 @@
       <div class="blog-container container">
         <!--Box 1-->
         <div class="box">
-          <img src="/img/Man1.jpeg" alt="no" />
+          <img src="img\Man1.jpeg" alt="no" />
           <span>Gani Shaikh</span>
           <h3>Vasai</h3>
           <p>
@@ -249,7 +249,7 @@
 
         <!--Box 2-->
         <div class="box">
-          <img src="/img/Man2.jpg" alt="no" />
+          <img src="img\Man2.jpg" alt="no" />
           <span>Wasim Shaikh</span>
           <h3>Dadar</h3>
           <p>
@@ -265,7 +265,7 @@
 
         <!--Box 3-->
         <div class="box">
-          <img src="/img/Man3.jpeg" alt="no" />
+          <img src="img\Man3.jpeg" alt="no" />
           <span>Saddam Shaikh</span>
           <h3>Nalasopara</h3>
           <p>
