--- a/index.html
+++ b/index.html
@@ -286,10 +286,18 @@
         <div class="footer-box">
           <a href="#" class="logo">Vehicle <span>Sales </span></a>
           <div class="social">
-            <a href="#"><i class="bx bxl-facebook"></i></a>
-            <a href="#"><i class="bx bxl-twitter"></i></a>
-            <a href="#"><i class="bx bxl-instagram"></i></a>
-            <a href="#"><i class="bx bxl-youtube"></i></a>
+            <a href="https://wa.me/8767402383"
+              ><i class="bx bxl-whatsapp"></i
+            ></a>
+            <a href="https://github.com/soyxbshxikh"
+              ><i class="bx bxl-github"></i
+            ></a>
+            <a href="https://www.instagram.com/soyab.shaikh2004?igsh=NzhsaTB1czR5bjl4"
+              ><i class="bx bxl-instagram"></i
+            ></a>
+            <a href="https://youtube.com/@darrk_gamers?si=weXBq1F49ycOgbX_"
+              ><i class="bx bxl-youtube"></i
+            ></a>
           </div>
         </div>
         <div class="footer-box">
